# emojicolors

./: Cargo.toml  README.md  emojicolors.json
src/: main.rs
