[package]
name = "emojis"
version = "0.1.0"
authors = ["Mårten Åsberg <marten.asberg@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.12"
base64 = "0.13"
image = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
